fix: Share status column is now hidden on mobile

--- a/src/drive/styles/table.styl
+++ b/src/drive/styles/table.styl
@@ -214,6 +214,9 @@ mime-types('fil-file-', '../assets/icons/')
         .fil-content-offline
             display inline-block
 
+        .fil-content-sharestatus
+            display none
+
     .fil-content-file-action
         display    block
         flex       0 0 em(46px, 14px)
